# iralink-agency.watch

./: .env.example  .gitignore  CNAME  README.md  app.js  buy_score.py  compte.html  compte.js  db.json  formations.html  formations.js  index.html  marketplace.html  marketplace.js  package-lock.json  package.json  patrimoine.html  patrimoine.js  pyproject.toml  requirements-dev.txt  script.js  server.js  styles.css  test_buy_score.py
.github/workflows/: ci-security.yml  ci.yml  security.yml
app/: __init__.py  audit.py  auth.py  config.py  crypto.py  database.py  main.py  models.py  rate_limit.py  retention.py  schemas.py  security.py
apps/api/app/: main.py
apps/web/: package-lock.json  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: opportunity.ts
apps/web/tests/: opportunity.test.ts
docs/: deploiement-gratuit.md  plateforme-complete.md  postgres-managed-setup.md  roadmap-90-jours.md
infra/: docker-compose.yml
infra/iac/: README.md
infra/openapi/: watch-api.yaml
prisma/: schema.prisma
prisma/migrations/20260210220000_init/: migration.sql
public/: robots.txt  sitemap.xml
scripts/: purge_data.py
services/collector/: main.py
services/scoring/: main.py
src/: App.jsx  buy_score.py  main.jsx  styles.css
src/components/: SectionCard.jsx  Seo.jsx  useApiData.js
src/iralink_agency_watch/: __init__.py  app.py
src/pages/: AccountPage.jsx  HomePage.jsx  LearningPage.jsx  MarketplacePage.jsx  PortfolioPage.jsx
src/pipeline/: models.py  queue.py  runner.py  sinks.py  sla.py
src/pipeline/orchestration/: airflow_dag.py
src/pipeline/stages/: collect.py  deduplicate.py  enrich.py  normalize.py  score.py
src/watch_pipeline/: __init__.py  collectors.py  deduplication.py  enrichment.py  messaging.py  models.py  normalization.py  pipeline.py  scoring.py  sla.py  storage.py
src/watch_pipeline/orchestration/: __init__.py  airflow_dag.py  temporal_workflow.py
tests/: test_api.py  test_audit_chain.py  test_buy_score.py  test_pipeline.py  test_security.py  test_security_controls.py  test_services.py
