[project]
name = "iralink-agency-watch"
version = "0.1.0"
description = "Secure API baseline with OAuth2/OIDC, RBAC, audit logs and retention"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "slowapi>=0.1.9",
  "cryptography>=43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
