[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iralink-agency-watch"
version = "0.1.0"
description = "Iralink Agency Watch services and static site assets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "slowapi>=0.1.9",
  "cryptography>=43",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "click>=8.1.8,<8.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iralink-api = "iralink_agency_watch.app:main"
