[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iralink-agency-watch"
version = "0.1.0"
description = "Secure API baseline with OAuth2/OIDC, RBAC, rate limiting, immutable audit, PII encryption and retention policies"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "PyJWT[crypto]>=2.9.0",
  "httpx>=0.27.0",
  "cachetools>=5.3.0",
  "cryptography>=43.0.0",
  "pydantic-settings>=2.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["app"]
